--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
   "users": {
     "7665314715": {
       "sudoList": [],
-      "tagAudioPath": "https://files.catbox.moe/ztn9bu.mp3",
+      "tagAudioPath": "loft.mp3",
       "antilink": false,
       "response": true,
       "autoreact": false,
@@ -20,7 +20,7 @@
       "sudoList": [
         "255610150148"
       ],
-      "tagAudioPath": "https://files.catbox.moe/ztn9bu.mp3",
+      "tagAudioPath": "loft.mp3",
       "antilink": false,
       "response": false,
       "autoreact": false,
